syntax = "proto3";

option java_package = "br.com.houseseeker.domain.proto";
option java_multiple_files = true;

message PaginationRequestData {
  int32 pageSize = 1;
  int32 pageNumber = 2;
}

enum OrderDirectionData {
  ASC = 0;
  DESC = 1;
}

message OrderDetailsData {
  int32 index = 1;
  OrderDirectionData direction = 2;
}